--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ pageTitle }}</title>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
 
