Modified date in the layout.liquid
Using Liquid filters, we formatted the date in the website.

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -16,7 +16,7 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <p>{{ date }}<p>
+        <p>{{ date | date: "%B %d, %Y" }}<p>
 
         {{ content }}
 
