Add an image to header/ Change content and config
Created a header on layout.liquid file with title and html command to
insert image. I configured this command (liquid = `{{ image}}`)
to  chnage image depending on the page (tags). The image file is
set in individual page markdown file.
However, the image wasn't loading because we needed to copy the assets
folder (where the image is) to the output folder. We did this on
`config.js`.
Changed some content in the index, about and first post.

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -5,17 +5,21 @@
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
+
+    <header>
+        <h1>{{ title }}</h1>
+        <img class="banner" src="/assets/{{ image }}" alt="home-image"> 
+    </header>
+
     <body>
 
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about">Sobre</a></li>
             <li><a href="/posts">Entrevistas</a></li>
         </ul>
 
         <hr>
-
-        <h1>{{ title }}</h1>
 
         <p>{{ date | date: "%B %d, %Y" }}<p>
 
