--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -8,18 +8,18 @@
 
     <header>
         <h1>{{ title }}</h1>
+        
+        <div class="menu">
+            <a href="/">Home</a></li>
+            <a href="/about">Sobre</a></li>
+            <a href="/posts">Entrevistas</a></li>
+        </div>
+
         <img class="banner" src="/assets/{{ image }}" alt="home-image"> 
+
     </header>
 
     <body>
-
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">Sobre</a></li>
-            <li><a href="/posts">Entrevistas</a></li>
-        </ul>
-
-        <hr>
 
         <p>{{ date | date: "%B %d, %Y" }}<p>
 
