Change template language and add a new template
Changed the template language from Liquid to Nunjucks because of
the lack of the Template Inheritance. This included changes in the
layout file itself (code), name of the file (`layout.njk)`, and name in
the Markdown headers (all the .md files).
Added a new template for the posts-index (`layout-posts.njk`). It uses
the parent template (`layout.njk`). Modifications were made based on
the "blocks" definition
(https://mozilla.github.io/nunjucks/templating.html#template-inheritance).

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -7,30 +7,29 @@
     </head>
 
     <header>
-        <h1>{{ title }}</h1>
-        
+
+        {% block title %}
+            <h1>{{ title }}</h1>
+        {% endblock %}
+
         <div class="menu">
             <a href="/">Home</a></li>
             <a href="/about">Sobre</a></li>
             <a href="/posts">Entrevistas</a></li>
         </div>
 
-        <img class="banner" src="/assets/{{ image }}" alt="home-image"> 
+        <img class="banner" src="/assets/{{ image }}" alt="{{ image_alt }}"> 
 
     </header>
 
     <body>
 
-        <p>{{ date | date: "%B %d, %Y" }}<p>
+        {% block content %}
+            {{ content | safe }}
+        {% endblock %}
 
-        {{ content }}
 
-        {% for post in collections.posts %}
-            <p>
-            <a href="{{ post.url }}">{{ post.data.title }}</a>
-            ({{ post.data.date  | date: "%B %d, %Y"}}) 
-            </p>
-        {% endfor %}
+
 
         <hr>
 
