--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ title }}</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/caroldoscopio/css/style.css">
     </head>
 
     <header>
@@ -13,12 +13,12 @@
         {% endblock %}
 
         <div class="menu">
-            <a href="/">Home</a></li>
-            <a href="/about">Sobre</a></li>
-            <a href="/posts">Entrevistas</a></li>
+            <a href="/caroldoscopio/">Home</a></li>
+            <a href="/caroldoscopio/about">Sobre</a></li>
+            <a href="/caroldoscopio/posts">Entrevistas</a></li>
         </div>
 
-        <img class="banner" src="/assets/{{ image }}" alt="{{ image_alt }}"> 
+        <img class="banner" src="/caroldoscopio/assets/{{ image }}" alt="{{ image_alt }}"> 
 
     </header>
 
