--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -1,8 +1,4 @@
-{% extends "layout.njk" %}
-
-{% block title %}
-<h1>Entrevistas</h1>
-{% endblock %}
+{% extends "page.njk" %}
 
 {% block content %}
 
@@ -13,7 +9,7 @@
     {% for post in collections.posts %}
         <p>
         <a href="{{ post.url }}">{{ post.data.title }}</a>
-        ({{ post.data.date }}) 
+        ({{ post.data.date }})
         </p>
     {% endfor %}
 
