--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,74 @@
-header {
-    font-size: 16pt;
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    color: #333333;
+    /* Margin bottom by footer height with a little room to accomodate small screens */
+    margin: 0 0 400px 0;
 }
 
 h1 {
     font-size: 24pt;
-    color: rgb(24, 170, 90);
 }
-
-.menu {
-    margin-top: 10px;
-    float: right;
-    padding: 5px;
-    margin: 5px;
-    word-spacing: 15px;
-}
-
-.banner{
-    width: 100%;
-}
-
-body {
-    font-size: 12pt;
-    color: #333333;
-}
-
 
 h2 {
     font-size: 14pt;
-    color: #333333;
 }
 
 footer {
     color: #666666;
+}
+
+header {
+    font-size: 12pt;
+    color: #333333;
+    width: 100%;
+    min-height: 600px;
+    background-size: cover;
+    margin: 0px;
+    padding: 0px;
+}
+
+header a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.navigation {
+    margin: 0;
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.brand {
+    flex: 1;
+}
+
+.menu {
+    flex: 5;
+    text-align: right;
+    word-spacing: 15px;
+}
+
+.menu > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu > ul > li {
+    display: inline;
+}
+
+/* To wrap all content in a page */
+.container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 60px;
 }
