Collapse the navigation when the screen is small
Center the elements so they look nicer

--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,21 @@ header a {
 
 /* To wrap all content in a page */
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0px 20px;
+    padding: 0px 40px;
+}
+
+@media (max-width: 500px) {
+    .navigation {
+        display: block;
+        text-align: center;
+    }
+    .brand {
+        padding: 0 0 10px 0;
+    }
+    .menu > span {
+        padding: 0 10px;
+    }
 }
