Changed banner size on smaller screens
We had to set the min-height on CSS-header and Media query. Also,
added a linear gradient on Template (base.njk)-header to make the text
more legible

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -27,7 +27,7 @@
 
 <body>
 
-  <header style="background-image: url(/{{ banner }});" >
+  <header style="background-image: linear-gradient(to top, #00000000, #000000cc), url(/{{ banner }}) ;" >
   {% block header %}
     <div  class="container">
       <div class="navigation">
