Split the menu and dis all the changes
Split the menu in menu and language_menu on info.json. We created
a new class in the base.njk in case we wanted to change the design.
Changed the CSS for the menu to fit the page in 3 levels.

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -27,7 +27,7 @@
 
 <body>
 
-  <header style="background-image: linear-gradient(to top, #00000000, #000000cc), url(/{{ banner }}) ;" >
+  <header style="background-image: linear-gradient(to top, #00000000, #000000ff), url(/{{ banner }}) ;" >
   {% block header %}
     <div  class="container">
       <div class="navigation">
@@ -36,6 +36,11 @@
         </div>
         <div class="menu">
             {% for name, url in info.site_menu %}
+              <span><a href="{{ url }}">{{ name }}</a></span>
+            {% endfor %}
+        </div>
+        <div class="language_menu">
+            {% for name, url in info.site_languages %}
               <span><a href="{{ url }}">{{ name }}</a></span>
             {% endfor %}
         </div>
