--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,14 @@ header {
 }
 
 .banner-text {
-  padding: 4rem 0;
+  padding: 7rem 0;
 }
 
 .page-content {
   margin-top: 5rem;
+}
+
+.narrow-page {
   max-width: 700px;
 }
 
@@ -74,4 +77,17 @@ header {
 
 .about-img {
   margin-bottom: 2rem;
+}
+
+/* Used to hide elements that should only be shown to screen readers */
+.hidden {
+  display: none;
+}
+
+.callout {
+  margin: 0 auto 1.5rem;
+  /* Set a tiny bottom padding because 0 causes it to ignore the p padding */
+  padding: 1rem 1rem 0.001rem;
+  box-shadow: 0.1rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+  background-color: var(--bs-gray-100);
 }
