--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,13 @@ header {
   box-shadow: 0.1rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
   background-color: var(--bs-gray-100);
 }
+
+a {
+  color: var(--bs-body-color);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--bs-body-color);
+  text-decoration: underline;
+}
