Add the infrastructure for a "Science" page
Includes a list of publications defined in the `papers.yml` file. The
`science.md` page includes a template that generates the list of
publications from the data in this file.

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ header {
   font-size: 1rem;
 }
 
+blockquote {
+  color: var(--bs-gray-600) !important;
+  border-left: 0.25rem solid var(--bs-gray-600);
+  padding-left: 1rem;
+}
+
 
 /* Tweaks to Bootstrap classes */
 :root {
